--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 <body>
 <div class="slider__container">
   <div id="slides" class="slides">
-    <div class="slide active">Slide 1</div>
-    <div class="slide">Slide 2</div>
-    <div class="slide">Slide 3</div>
-    <div class="slide">Slide 4</div>
-    <div class="slide">Slide 5</div>
+    <div class="slide active" style="background-image: url(assets/img/1.jpg);">Slide 1</div>
+    <div class="slide" style="background-image: url(assets/img/2.jpg);">Slide 2</div>
+    <div class="slide" style="background-image: url(assets/img/3.jpg);">Slide 3</div>
+    <div class="slide" style="background-image: url(assets/img/4.jpg);">Slide 4</div>
+    <div class="slide" style="background-image: url(assets/img/5.jpg);">Slide 5</div>
   </div>
 </div>
 
 
 <script src="libs/jquery/dist/jquery.min.js"></script>
+<script src="assets/js/slider-style.js"></script>
 <script src="assets/js/index.js" type="module"></script>
 
 </body>
