add slider.js in index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="assets/js/slider-style.js"></script>
+<script src="assets/js/slider.js"></script>
 <script src="assets/js/index.js" type="module"></script>
 
 </body>
