--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<script src="libs/jquery/dist/jquery.min.js"></script>
+<!--<script src="libs/jquery/dist/jquery.min.js"></script>-->
 <script src="assets/js/slider-style.js"></script>
 <script src="assets/js/slider.js"></script>
 <script src="assets/js/index.js" type="module"></script>
