--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
     <div class="slide" style="background-image: url(assets/img/4.jpg);">Slide 4</div>
     <div class="slide" style="background-image: url(assets/img/5.jpg);">Slide 5</div>
   </div>
-  <!--  <div class="wrapper"></div>-->
 </div>
 
 
-<!--<script src="libs/jquery/dist/jquery.min.js"></script>-->
-<script src="assets/js/slider-style.js"></script>
+<script src="assets/js/slider-style.js" type="module"></script>
 <script src="assets/js/index.js" type="module"></script>
 
 </body>
