create new release 1.1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="libs/@fontawesome/fontawesome-free-6-4-0/css/all.min.css">
   <!-- Подключаем наш основной стиль, с которым будем работать -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>JS slider</title>
+  <title>JS slider with F.prototype</title>
 </head>
 
 <body>
